Menu name updated.

--- a/Bangla Kabita/res/values/strings.xml
+++ b/Bangla Kabita/res/values/strings.xml
@@ -16,7 +16,7 @@
         <item >সুকান্ত ভট্টাচার্য</item>
         <item >জীবানন্দ দাস</item>
         <item >জসিম উদ্দিন</item>
-        <item >বিবিধ MS</item>
+        <item >বিবিধ </item>
     </string-array>
     
     <!-- Nav Drawer List Item Icons -->
